# DigitalBusinessCard

./: .env.development  .env.production  DAY_3_DEPLOYMENT_PLAN.md  DIRECT_DEPLOYMENT_GUIDE.md  DYNAMIC_URL_GUIDE.md  FIXED_ENVIRONMENT_SETUP.md  LOCAL_TESTING_CHECKLIST.md  PHASE_1_2_COMPLETE.md  PRODUCTION_READY.md  REVAMP_PLAN_3DAYS.md  STATUS_UPDATE.md  docker-compose.yml  nginx-config-droplet.conf  update-network.sh
backend/: database_models.py  migrations.py  pyproject.toml  requirements.txt  routes.py  services.py
frontend/src/app/: page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/signup/: route.ts
frontend/src/app/api/card/: route.ts
frontend/src/app/api/proxy/: route.ts
frontend/src/app/api/qrcode/: route.ts
frontend/src/app/api/vcard/: route.ts
frontend/src/app/auth/login/: page.tsx
frontend/src/app/card/[company_slug]/[employee_slug]/: page.tsx
frontend/src/app/company-admin/branding/: modern.tsx
frontend/src/app/company-admin/settings/: page.tsx
strapi-backend/: package-lock.json  package.json
